Alignment fix for "collapse credentials section" icon in FF browser.

--- a/src/main/resources/public/scss/components/_rp-common-styles.scss
+++ b/src/main/resources/public/scss/components/_rp-common-styles.scss
@@ -1452,10 +1452,12 @@ li {
     position: absolute;
     right: -15px;
     font-size: 24px;
+    top: -8px;
   }
 
   &.collapsed:after {
     content: "+";
+    top: -6px;
   }
 }
 
